force-app/main/default/objects/Product2/fields/Billing_Model__c.field-meta.xml
<CustomField>
    <fullName>Billing_Model__c</fullName>
    <inlineHelpText>Subscription prices are annual rates scaled by quote term.</inlineHelpText>
    <label>Billing Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Subscription</fullName>
                <default>true</default>
                <label>Subscription</label>
            </value>
            <value>
                <fullName>One-Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>