force-app/main/default/objects/Product2/fields/ERP_SKU__c.field-meta.xml
<CustomField>
    <fullName>ERP_SKU__c</fullName>
    <externalId>true</externalId>
    <label>ERP SKU</label>
    <length>64</length>
    <type>Text</type>
</CustomField>